--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="app_name">AsTas</string>
-    <string name="tasks">Tarefas</string>
+    <string name="label_tasks">Tarefas</string>
     <string name="new_title">Título</string>
     <string name="insert_description">Descrição</string>
     <string name="date">Data</string>
     <string name="hour">Hora</string>
     <string name="create_task">Criar Tarefa</string>
     <string name="cancel">Cancelar</string>
-    <string name="add_button">add_button</string>
+    <string name="label_add_new_task">Nova Tarefa</string>
 </resources>
