implementacao do recyclerView no activity_main.xml e criacao do item_task.xml e ic_more.xml; MainActivity.kt movido para pasta ui;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="create_task">Criar Tarefa</string>
     <string name="cancel">Cancelar</string>
     <string name="label_add_new_task">Nova Tarefa</string>
+    <string name="example_title">Passear com o cachorro</string>
+    <string name="open_more_opt">abre mais opções</string>
 </resources>
