correcoes de codigo; criacao do popup_menu.xml; implementando o botao menu;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="label_add_new_task">Nova Tarefa</string>
     <string name="example_title">Passear com o cachorro</string>
     <string name="open_more_opt">abre mais opções</string>
+    <string name="label_edit">Editar</string>
+    <string name="label_delete">Deletar</string>
 </resources>
